# utils

./: README.md  logger.config.json  logger.py  middleware.py  pyproject.toml
database/: __init__.py  async_database.py  general.py  redis_cache.py  sync_database.py
database/crud/: __init__.py  general.py  simple_crud.py
fastapi/auth/: dependencies.py  secret_key.py  utils.py
fastapi/exceptions/: exceptions_user.py  general.py
fastapi/middleware/: __init__.py  logging.py  metrics.py
logger/: logger.config.json  logger.py
tests/: conftest.py
tests/database/: test_async_database.py  test_general.py  test_sync_database.py
tests/database/crud/: test_simple_crud.py
tests/logger/: test_logger.py
